Prevent layout shifting on content alignment set
ref #3647

--- a/authui/src/authflowv2/components/widget.css
+++ b/authui/src/authflowv2/components/widget.css
@@ -26,6 +26,11 @@
     @apply px-6 py-8;
   }
 
+  :root:not([alignment-content]) .widget {
+    /* This rule is to prevent ui shifting before the attribute added */
+    @apply invisible;
+  }
+
   @media (min-width: theme("screens.tablet")) {
     .widget {
       @apply px-6 py-6;
